# AiPO_FootballCV_Project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: example_config.yaml
notebooks/: full_pipeline_local.ipynb  model_inference_check.ipynb
notebooks/outputs/: model_detections.csv
notebooks/stubs/: tracks.pkl
src/aipo_football_cv/: __init__.py  ball.py  cli.py  geometry.py  infer_model.py  passes_and_possession.py  pipeline.py  speed_distance.py  stats.py  team.py  tracker.py  video.py  view_transformer.py
