[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipo-football-cv"
version = "0.1.0"
description = "AiPO projekt - lokalny pipeline computer vision dla nagrań piłkarskich"
requires-python = ">=3.10"
dependencies = [
  "ultralytics>=8.2.0",
  "supervision>=0.20.0",
  "opencv-python>=4.9.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "tqdm>=4.66.0",
]

[project.scripts]
aipo-football-cv = "aipo_football_cv.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
